--- a/TiltCodeManager/app/src/main/res/layout/activity_login.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
                         android:layout_gravity="center_horizontal" />
 
                     <EditText
-                        android:background="#b3ffff"
+                        android:background="@drawable/text"
                         android:padding="5dp"
                         android:layout_margin="5dp"
                         android:hint="ID"
@@ -60,7 +60,7 @@
                         android:id="@+id/edt_login_id" />
 
                     <EditText
-                        android:background="#b3ffff"
+                        android:background="@drawable/text"
                         android:padding="5dp"
                         android:layout_margin="5dp"
                         android:hint="PW"
@@ -72,6 +72,7 @@
 
 
                     <CheckBox
+                        android:checked="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="자동로그인"
