--- a/tiltcode/app/src/main/res/layout/activity_changepasswd.xml
+++ b/tiltcode/app/src/main/res/layout/activity_changepasswd.xml
@@ -63,15 +63,21 @@
 
                 <EditText
                     android:layout_width="match_parent"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/text"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
+                    android:padding="5dp"
                     android:hint="PW"
                     android:ems="10"
                     android:id="@+id/edt_setting_account_passwd" />
 
                 <EditText
+                    android:layout_margin="5dp"
                     android:layout_width="match_parent"
+                    android:padding="5dp"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/text"
                     android:inputType="textPassword"
                     android:hint="Retype"
                     android:ems="10"
@@ -87,10 +93,14 @@
                     android:textColor="#b3ffff"
                     />
 
+
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="New Button"
+                    android:text="변경"
+                    android:textColor="#ababab"
+                    android:background="#000000"
                     android:id="@+id/btn_setting_account_passwd_proc"
                     android:layout_gravity="center_horizontal" />
 
