--- a/TiltCodeManager/app/src/main/res/layout/activity_register.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_register.xml
@@ -35,12 +35,13 @@
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
+                        android:layout_marginBottom="30dp"
                         android:layout_height="wrap_content">
 
                         <TextView
                             android:layout_marginTop="10dp"
                             android:layout_width="wrap_content"
-                            android:textSize="18dp"
+                            android:textSize="20dp"
                             android:layout_height="wrap_content"
                             android:text="등록"
                             android:textColor="#b3ffff"
@@ -53,7 +54,6 @@
                             android:layout_width="match_parent"
                             android:textSize="18dp"
                             android:layout_height="wrap_content"
-                            android:text="정성민님"
                             android:textColor="#b3ffff"
                             />
 
@@ -114,13 +114,16 @@
                         android:textSize="18dp"
                         android:layout_height="wrap_content"
                         android:visibility="gone"
-                        android:textColor="#b3ffff"
+                        android:textColor="#ffffff"
                         android:id="@+id/tv_register_file_uri" />
 
                     <ImageButton
-                        android:src="@drawable/back"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_file"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxHeight="150dp"
+                        android:maxWidth="150dp"
                         android:id="@+id/imv_register_file" />
 
                     <TextView
@@ -133,10 +136,12 @@
                         />
 
                     <ImageButton
-                        android:src="@drawable/back"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_image"
                         android:layout_width="wrap_content"
-                        android:maxHeight="100dp"
                         android:layout_height="wrap_content"
+                        android:maxHeight="150dp"
+                        android:maxWidth="150dp"
                         android:id="@+id/imv_register_image" />
 
                     <TextView
@@ -150,9 +155,13 @@
 
                     <EditText
                         android:layout_width="match_parent"
+                        android:gravity="top"
                         android:layout_height="wrap_content"
-                        android:hint="description"
+                        android:hint="title"
                         android:minLines="3"
+                        android:background="@drawable/text"
+                        android:padding="5dp"
+                        android:layout_margin="5dp"
                         android:id="@+id/edt_register_title" />
 
                     <TextView
@@ -165,6 +174,10 @@
                         />
 
                     <EditText
+                        android:background="@drawable/text"
+                        android:padding="5dp"
+                        android:gravity="top"
+                        android:layout_margin="5dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="description"
@@ -188,11 +201,15 @@
 
 
                     <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50dp"
+                        android:layout_marginTop="50dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
                         android:text="등록"
-                        android:id="@+id/btn_register_proc"
-                        android:layout_gravity="center_horizontal" />
+                        android:textColor="#ababab"
+                        android:background="#000000"
+                        android:layout_gravity="center_horizontal"
+                        android:id="@+id/btn_register_proc" />
 
                 </LinearLayout>
             </ScrollView>
