--- a/tiltcode/app/src/main/res/layout/activity_changename.xml
+++ b/tiltcode/app/src/main/res/layout/activity_changename.xml
@@ -57,6 +57,8 @@
                 <EditText
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
+                    android:background="@drawable/text"
+                    android:padding="5dp"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:hint="Name"
@@ -66,7 +68,9 @@
                 <EditText
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
+                    android:padding="5dp"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/text"
                     android:inputType="textPersonName"
                     android:hint="Retype"
                     android:ems="10"
@@ -83,12 +87,17 @@
                     android:textColor="#b3ffff"
                     />
 
+
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="New Button"
+                    android:text="변경"
+                    android:textColor="#ababab"
+                    android:background="#000000"
                     android:id="@+id/btn_setting_account_name_proc"
                     android:layout_gravity="center_horizontal" />
+
 
             </LinearLayout>
         </LinearLayout>
