--- a/tiltcode/app/src/main/res/layout/activity_lockscreen.xml
+++ b/tiltcode/app/src/main/res/layout/activity_lockscreen.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:background="#00ffff"
+            android:background="#2d3c44"
             android:layout_marginBottom="70dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
@@ -20,15 +20,16 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:background="#dd00dd"
-                android:layout_height="35dp">
+                android:background="#364551"
+                android:padding="5dp"
+                android:layout_height="40dp">
 
 
-                <TextView
+                <ImageView
+                    android:src="@drawable/logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Tilt Code" />
+                    android:id="@+id/imageView" />
             </LinearLayout>
 
             <LinearLayout
@@ -39,18 +40,21 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:textSize="30dp"
+                    android:textColor="#efefef"
                     android:layout_height="wrap_content"
                     android:text="새로운 TILT가 감지되었습니다." />
 
                 <FrameLayout
+                    android:layout_marginTop="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:background="#efefef"
+                        android:background="#b3ffff"
                         android:layout_height="match_parent">
 
                     </LinearLayout>
@@ -61,9 +65,18 @@
                         android:layout_height="wrap_content"
                         android:clickable="false"
                         android:max="100"
+                        android:progress="5"
                         android:progressDrawable="@android:color/transparent"
                         android:thumb="@drawable/back" />
                 </FrameLayout>
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:textSize="22dp"
+                    android:textColor="#ababab"
+                    android:layout_height="wrap_content"
+                    android:text="드래그하여 쿠폰확인" />
 
             </LinearLayout>
 
