--- a/tiltcode/app/src/main/res/layout/fragment_tiltcode.xml
+++ b/tiltcode/app/src/main/res/layout/fragment_tiltcode.xml
@@ -17,6 +17,7 @@
             android:layout_gravity="center_horizontal">
 
             <com.tiltcode.tiltcode.View.TiltCodeView
+                android:id="@+id/tiltview_tiltcodefragment"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_width="match_parent"
