--- a/TiltCodeManager/app/src/main/res/layout/item_tiltselect_row.xml
+++ b/TiltCodeManager/app/src/main/res/layout/item_tiltselect_row.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imv_tiltselect_row" />
