--- a/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
+++ b/tiltcode/app/src/main/res/layout/item_foldable_detail.xml
@@ -5,6 +5,7 @@
 
     <LinearLayout
         android:orientation="vertical"
+        android:background="#364551"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal">
@@ -40,7 +41,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="200dp"
-                android:background="#000000"
                 android:layout_gravity="center_horizontal">
 
 
@@ -63,6 +63,13 @@
                     android:textColor="#ffffff"
                     android:id="@+id/tv_coupon_detail_create" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:textColor="#ffffff"
+                    android:id="@+id/tv_coupon_detail_location" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -71,6 +78,20 @@
                     android:textSize="40dp"
                     android:text=""
                     android:id="@+id/tv_coupon_detail_desc" />
+
+
+                <Button
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="쿠폰 다운로드"
+                    android:textColor="#ababab"
+                    android:background="#000000"
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/btn_couponitem_proc" />
             </LinearLayout>
 
         </LinearLayout>
