--- a/TiltCodeManager/app/src/main/res/layout/activity_gpsselect.xml
+++ b/TiltCodeManager/app/src/main/res/layout/activity_gpsselect.xml
@@ -34,9 +34,9 @@
 
 
         <ImageView
-                android:src="@drawable/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:src="@drawable/gps"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:id="@+id/imageView"
                 android:layout_gravity="center" />
 
