--- a/TiltCodeManager/app/src/main/res/layout/item_tiltselect_row.xml
+++ b/TiltCodeManager/app/src/main/res/layout/item_tiltselect_row.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
+        android:rotation="90"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imv_tiltselect_row" />
