--- a/TiltCodeManager/app/src/main/res/values/styles.xml
+++ b/TiltCodeManager/app/src/main/res/values/styles.xml
@@ -4,5 +4,17 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    <!-- You must inherit from Theme.AppCompat. Dark or light doesn't matter -->
+    <style name="FilePickerTheme" parent="Theme.AppCompat.DialogWhenLarge">
 
+        <!-- Need to set this also to style create folder dialog -->
+        <item name="alertDialogTheme">@style/FilePickerAlertDialogTheme</item>
+
+        <!-- These are important. Handled by toolbar -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="FilePickerAlertDialogTheme" parent="Theme.AppCompat.Dialog.Alert">
+    </style>
 </resources>
